--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,6 +28,13 @@ steps:
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
 
+- task: VSBuild@1
+  inputs:
+    solution: 'BackEnd\EmployeeApi\EmployeeApi.csproj.csproj'
+    msbuildArgs: '/p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true /p:DesktopBuildPackageLocation="$(build.artifactStagingDirectory)\emp1.zip" /p:DeployIisAppPath="Employee API"'
+    platform: '$(buildPlatform)'
+    configuration: '$(buildConfiguration)'
+
 - task: CopyFiles@2
   inputs:
     SourceFolder: 'HR-ArmTemplate/'
