--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,7 +30,7 @@ steps:
 
 - task: VSBuild@1
   inputs:
-    solution: 'BackEnd\EmployeeApi\EmployeeApi.csproj.csproj'
+    solution: 'BackEnd\EmployeeApi\EmployeeApi.csproj'
     msbuildArgs: '/p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true /p:DesktopBuildPackageLocation="$(build.artifactStagingDirectory)\emp1.zip" /p:DeployIisAppPath="Employee API"'
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
