--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -37,7 +37,7 @@ steps:
 
 - task: CopyFiles@2
   inputs:
-    SourceFolder: 'SolutionFiles/Deployments/Terraform/'
+    SourceFolder: 'Terraform/'
     Contents: '*.tf'
     TargetFolder: '$(build.artifactStagingDirectory)'
 
